--- a/docs/source/notebooks/validation.ipynb
+++ b/docs/source/notebooks/validation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Validation\n",
     "\n",
-    "This document shows how the shading calculations using the ``twoaxistracking`` package compares to values calculated with existing methods found in the literature. Specifically, the annual shading fraction is compared with the values presented in Cumpston and Pye (2014) for eight different field layouts. The reference study (Cumpston and Pye, 2014) utilized the algorithm developed by Meller (2010), which has previously been compared to results from Pons & Dugan (1984).\n",
+    "This document shows how the shading calculations using the ``twoaxistracking`` package compares to values calculated with existing methods found in the literature. Specifically, the annual shading loss is compared with the values presented in Cumpston and Pye (2014) for eight different field layouts. The reference study (Cumpston and Pye, 2014) utilized the algorithm developed by Meller (2010), which has previously been compared to results from Pons & Dugan (1984).\n",
     "\n",
     "Import necessary packages:"
    ]
@@ -51,7 +51,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.6093247502315768 -0.6093247502315768 1.2186495004631537 1.2186495004631537\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.024372990009263074\" opacity=\"0.6\" d=\"M 0.5641895835477563,0.0 L 0.5614728564942745,-0.055300249583076784 L 0.5533488389004679,-0.11006792753247706 L 0.539895769496805,-0.16377559117048995 L 0.5212432086958386,-0.21590600633668597 L 0.4975707908546091,-0.26595712863563087 L 0.4691064942975874,-0.3134469383988593 L 0.43612444576078485,-0.35791808279778053 L 0.3989422804014327,-0.3989422804014327 L 0.35791808279778053,-0.4361244457607848 L 0.31344693839885934,-0.4691064942975874 L 0.265957128635631,-0.49757079085460904 L 0.215906006336686,-0.5212432086958386 L 0.16377559117048995,-0.5398957694968051 L 0.11006792753247711,-0.5533488389004679 L 0.055300249583076874,-0.5614728564942744 L 3.4546648380201897e-17,-0.5641895835477563 L -0.055300249583076805,-0.5614728564942745 L -0.11006792753247703,-0.5533488389004679 L -0.16377559117048984,-0.5398957694968051 L -0.21590600633668594,-0.5212432086958386 L -0.2659571286356309,-0.4975707908546091 L -0.3134469383988591,-0.46910649429758744 L -0.3579180827977805,-0.4361244457607849 L -0.39894228040143265,-0.3989422804014327 L -0.43612444576078485,-0.35791808279778053 L -0.46910649429758744,-0.3134469383988593 L -0.49757079085460904,-0.265957128635631 L -0.5212432086958386,-0.21590600633668602 L -0.539895769496805,-0.16377559117048998 L -0.5533488389004679,-0.11006792753247727 L -0.5614728564942744,-0.05530024958307691 L -0.5641895835477563,-6.909329676040379e-17 L -0.5614728564942745,0.05530024958307678 L -0.5533488389004679,0.11006792753247713 L -0.5398957694968051,0.16377559117048981 L -0.5212432086958387,0.21590600633668589 L -0.4975707908546091,0.26595712863563087 L -0.4691064942975875,0.3134469383988591 L -0.4361244457607849,0.3579180827977804 L -0.39894228040143276,0.39894228040143265 L -0.3579180827977808,0.4361244457607847 L -0.3134469383988593,0.4691064942975874 L -0.265957128635631,0.49757079085460904 L -0.21590600633668627,0.5212432086958385 L -0.16377559117049,0.539895769496805 L -0.1100679275324773,0.5533488389004679 L -0.0553002495830767,0.5614728564942745 L -1.0363994514060568e-16,0.5641895835477563 L 0.05530024958307649,0.5614728564942745 L 0.1100679275324771,0.5533488389004679 L 0.1637755911704898,0.5398957694968051 L 0.21590600633668608,0.5212432086958385 L 0.26595712863563087,0.4975707908546091 L 0.31344693839885907,0.4691064942975875 L 0.35791808279778065,0.4361244457607848 L 0.3989422804014326,0.39894228040143276 L 0.43612444576078463,0.3579180827977808 L 0.4691064942975874,0.3134469383988593 L 0.497570790854609,0.26595712863563103 L 0.5212432086958385,0.2159060063366863 L 0.539895769496805,0.16377559117049004 L 0.5533488389004679,0.11006792753247734 L 0.5614728564942745,0.05530024958307673 L 0.5641895835477563,0.0 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x290bc570e08>"
+       "<shapely.geometry.polygon.Polygon at 0x1f4f8340088>"
       ]
      },
      "execution_count": 2,
@@ -275,7 +275,7 @@
     "\n",
     "## Field layouts\n",
     "\n",
-    "Cumpston and Pye (2010) provided the annual shading fractions (ASF) for the optimal layout for eight different ground coverage ratios (GCR). The field layout parameters and their annual shading fractions were:"
+    "Cumpston and Pye (2010) provided the annual shading loss (ASL) for the optimal layout for eight different ground coverage ratios (GCR). The field layout parameters and their annual shading loss were:"
    ]
   },
   {
@@ -312,7 +312,7 @@
        "      <th>aspect_ratio</th>\n",
        "      <th>rotation</th>\n",
        "      <th>offset</th>\n",
-       "      <th>asf_cumpston</th>\n",
+       "      <th>asl_cumpston</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -393,7 +393,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   gcr  aspect_ratio  rotation  offset  asf_cumpston\n",
+       "   gcr  aspect_ratio  rotation  offset  asl_cumpston\n",
        "0  0.1      2.300000       0.0     0.0          0.04\n",
        "1  0.2      1.610000       0.0     0.0          1.53\n",
        "2  0.3      1.110000       1.0    -0.5          4.50\n",
@@ -412,7 +412,7 @@
    ],
    "source": [
     "dfc = pd.DataFrame(\n",
-    "    columns=['gcr', 'aspect_ratio', 'rotation', 'offset', 'asf_cumpston'],\n",
+    "    columns=['gcr', 'aspect_ratio', 'rotation', 'offset', 'asl_cumpston'],\n",
     "    data=[\n",
     "        [0.1, 2.3, 0.0, 0.0, 0.04],\n",
     "        [0.2, 1.61, 0.0, 0.0, 1.53],\n",
@@ -432,7 +432,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "For comparison the annual shading fraction for the eight field layouts is therefore calculated using the `twoaxistracking` package:"
+    "For comparison the annual shading loss for the eight field layouts is therefore calculated using the `twoaxistracking` package:"
    ]
   },
   {
@@ -447,17 +447,9 @@
       "C:\\Users\\arajen\\Documents\\GitHub\\twoaxistracking\\twoaxistracking\\layout.py:176: RuntimeWarning: invalid value encountered in arcsin\n",
       "  (tracker_distance * np.cos(delta_gamma_rad)))) + relative_slope\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 45.8 s\n"
-     ]
     }
    ],
    "source": [
-    "%%time\n",
     "field_parameters = ['gcr', 'aspect_ratio', 'rotation', 'offset']\n",
     "\n",
     "for index, (gcr, aspect_ratio, rotation, offset) in dfc[field_parameters].iterrows():\n",
@@ -474,8 +466,8 @@
     "    # Calculate shaded fraction for each timestamp\n",
     "    df['shaded_fraction'] = tracker_field.get_shaded_fraction(df['elevation'], df['azimuth'])\n",
     "\n",
-    "    # Calculate annual shading fraction\n",
-    "    dfc.loc[index, 'asf_twoaxistracking'] = (df['shaded_fraction'].multiply(df['dni>10deg'], axis='rows').sum() / \n",
+    "    # Calculate annual shading loss\n",
+    "    dfc.loc[index, 'asl_twoaxistracking'] = (df['shaded_fraction'].multiply(df['dni>10deg'], axis='rows').sum() / \n",
     "        df['dni>10deg'].sum()).round(4)*100"
    ]
   },
@@ -485,8 +477,8 @@
    "source": [
     "<br>\n",
     "\n",
-    "### Comparison of annual shading fraction\n",
-    "The annual shading fraction (ASF) presented in Cumpston and Pye (2014) and those calculated using the `twoaxistracking` package are shown below. The deviation between the shading fractions are presented both in absolute and relative terms."
+    "### Comparison of annual shading loss\n",
+    "The annual shading loss (ASL) presented in Cumpston and Pye (2014) and those calculated using the `twoaxistracking` package are shown below. The deviation between the shading fractions are presented both in absolute and relative terms."
    ]
   },
   {
@@ -519,8 +511,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>asf_cumpston</th>\n",
-       "      <th>asf_twoaxistracking</th>\n",
+       "      <th>asl_cumpston</th>\n",
+       "      <th>asl_twoaxistracking</th>\n",
        "      <th>absolute_deviation</th>\n",
        "      <th>percent_deviation</th>\n",
        "    </tr>\n",
@@ -601,7 +593,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     asf_cumpston  asf_twoaxistracking  absolute_deviation  percent_deviation\n",
+       "     asl_cumpston  asl_twoaxistracking  absolute_deviation  percent_deviation\n",
        "gcr                                                                          \n",
        "0.1          0.04                 0.04                0.00               0.00\n",
        "0.2          1.53                 1.51               -0.02              -1.31\n",
@@ -620,10 +612,10 @@
     }
    ],
    "source": [
-    "dfc['absolute_deviation'] = (dfc['asf_twoaxistracking'] - dfc['asf_cumpston'])\n",
-    "dfc['percent_deviation'] = (dfc['asf_twoaxistracking'] - dfc['asf_cumpston']).divide(dfc['asf_cumpston']).multiply(100)\n",
+    "dfc['absolute_deviation'] = (dfc['asl_twoaxistracking'] - dfc['asl_cumpston'])\n",
+    "dfc['percent_deviation'] = (dfc['asl_twoaxistracking'] - dfc['asl_cumpston']).divide(dfc['asl_cumpston']).multiply(100)\n",
     "\n",
-    "result_columns = ['asf_cumpston', 'asf_twoaxistracking', 'absolute_deviation', 'percent_deviation']\n",
+    "result_columns = ['asl_cumpston', 'asl_twoaxistracking', 'absolute_deviation', 'percent_deviation']\n",
     "dfc.set_index('gcr')[result_columns].round(2)"
    ]
   },
@@ -631,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the comparison above, it is evident that the difference between the annual shading fractions is very low (always lower than 1.3%). The discrepancies are believed to be due to minor differences in the quality control procedure applied to reference data."
+    "Based on the comparison above, it is evident that the difference between the annual shading losses is very low (always lower than 1.3%). The discrepancies are believed to be due to minor differences in the quality control procedure applied to reference data."
    ]
   },
   {
@@ -640,12 +632,19 @@
    "source": [
     "## References\n",
     "\n",
-    "Cumpston, J. and Pye, J., 2014. Shading and land use in regularly-spaced sun-tracking collectors. Sol. Energy 108, 199–209. https://doi.org/10.1016/j.solener.2014.06.012\n",
+    "[Cumpston, J. and Pye, J., 2014. Shading and land use in regularly-spaced sun-tracking collectors. Sol. Energy 108, 199–209.](https://doi.org/10.1016/j.solener.2014.06.012)\n",
     "\n",
-    "Meller, Y., 2010. Analytically calculating shading in regular arrays of sun-pointing collectors. Sol. Energy 84, 1967–1974. https://doi.org/10.1016/j.solener.2010.08.006\n",
+    "[Meller, Y., 2010. Analytically calculating shading in regular arrays of sun-pointing collectors. Sol. Energy 84, 1967–1974. ](https://doi.org/10.1016/j.solener.2010.08.006)\n",
     "\n",
-    "Pons, R.L., Dugan, A.F., 1984. The effect of concentrator field layout on the performance of point-focus distributed receiver systems. J. Sol. Energy Eng. Trans. ASME 106, 35–38. https://doi.org/10.1115/1.3267559"
+    "[Pons, R.L., Dugan, A.F., 1984. The effect of concentrator field layout on the performance of point-focus distributed receiver systems. J. Sol. Energy Eng. Trans. ASME 106, 35–38.](https://doi.org/10.1115/1.3267559)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -666,7 +665,9 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.12"
   },
-  "mystnb": {"execution_timeout": 120}
+  "mystnb": {
+   "execution_timeout": 120
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
